new proj/src/objects/GE_SS_Service_Ticket__c.object
<CustomObject>
    <fields>
        <fullName>GE_SS_3rd_Party_Owned__c</fullName>
        <label>3rd Party Owned</label>
        <summaryFilterItems>
            <field>GE_SS_Spares__c.GE_SS_Owned_By__c</field>
            <operation>equals</operation>
            <value>3rd Party</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_SS_Spares__c.GE_SS_Service_Ticket__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_SS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Air_Tickets_Booked__c</fullName>
        <label>Air Tickets Booked</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_SS_Block_Lease__c</fullName>
        <label>Block/Lease</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Co_worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-worker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Collect_Where__c</fullName>
        <label>Collect Where</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Commercial_Contact_Email__c</fullName>
        <label>Commercial Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_SS_Commercial_Contact_Name__c</fullName>
        <label>Commercial Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Commercial_Contact_Phone__c</fullName>
        <label>Commercial Contact Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Offshore_Fax__c</fullName>
        <label>Contact Offshore Fax.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Onshore_Fax__c</fullName>
        <label>Contact Onshore Fax.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Person_Offshore_Tel__c</fullName>
        <label>Contact Person Offshore Tel.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Person_Offshore__c</fullName>
        <label>Contact Person Offshore</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Person_Onshore_Tel__c</fullName>
        <label>Contact Person Onshore Tel.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Contact_Person_Onshore__c</fullName>
        <label>Contact Person Onshore</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Customer_Owned__c</fullName>
        <label>Customer Owned</label>
        <summaryFilterItems>
            <field>GE_SS_Spares__c.GE_SS_Owned_By__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_SS_Spares__c.GE_SS_Service_Ticket__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_SS_External_Timesheets_to_be_written__c</fullName>
        <label>External Timesheets to be written?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_GE_Owned__c</fullName>
        <label>GE Owned</label>
        <summaryFilterItems>
            <field>GE_SS_Spares__c.GE_SS_Owned_By__c</field>
            <operation>equals</operation>
            <value>GE</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_SS_Spares__c.GE_SS_Service_Ticket__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_SS_Heliport__c</fullName>
        <label>Heliport</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Job_Description__c</fullName>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Job_Location__c</fullName>
        <label>Job Location</label>
        <picklist>
            <picklistValues>
                <fullName>Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onshore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrective Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demobilisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobilisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Well Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT/EFAT-Extended FAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification/Overhaul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plug &amp; Abandon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intervention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Mobilization_Date_Time__c</fullName>
        <label>Mobilization Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Overall_Performance_Rating__c</fullName>
        <label>Overall Performance Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manifolds and Connectors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trees(SSPE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellheads(SSWE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controls (Topside)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controls (Subsea)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TLP&amp;SPAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chokes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - BOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - DISTRIBUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - SYSTEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - TOPSIDES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - TREE/MANIFOLDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - WOCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TREE ON MUDLINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURFACE TREE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVENTIONAL SUBSEA TREE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HORIZONTAL SUBSEA TREE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - FLOWLINE CONNECTORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - FLOWLINE JUMPERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - PLEMS / PLETS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - PROTECTIVE STRUCTURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - TEMPLATES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURFACE VALVE MANIFOLDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS700 WELLHEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSNT - HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS 700 WELLHEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTI-BOWL WELLHEADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG WELLHEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG5 COMPLETION EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TYPE OF SURFACE WELLHEADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWE - ADJUSTABLE TENSION RISER ASSEMBLY (RTA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS700 BULKLOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TLP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Project_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Region</label>
        <referenceTo>GE_SS_Project_Region__c</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>GE_SS_Project__c</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Report_Responsible__c</fullName>
        <label>Report Responsible</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Rig_Vessel_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rig/Vessel Name</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Service Tickets (Rig/Vessel Name)</relationshipLabel>
        <relationshipName>Service_Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Rig_Vessel_Type__c</fullName>
        <formula>Text(GE_SS_Rig_Vessel_Name__r.GE_DS_Rig_Type__c)</formula>
        <label>Rig/Vessel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Service_Finish_Date__c</fullName>
        <label>Service Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SS_Service_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Representative</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SS_Shift__c</fullName>
        <label>Shift</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Signature_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_SS_Standby_Finish_Date2__c</fullName>
        <label>Standby Finish-Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SS_Standby_Start_Date2__c</fullName>
        <label>Standby Start-Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Technical_Contact_Email__c</fullName>
        <label>Technical Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_SS_Technical_Contact_Name__c</fullName>
        <label>Technical Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Technical_Contact_Phone__c</fullName>
        <label>Technical Contact Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Technical_info_needed_offshore__c</fullName>
        <label>Technical info needed offshore?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Total_Days_in_Service__c</fullName>
        <formula>(GE_SS_Service_Finish_Date__c -  GE_SS_Service_Start_Date__c + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days in Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Total_Expense__c</fullName>
        <label>Total Expense</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Total_HMS__c</fullName>
        <label>Total HMS (Hrs)</label>
        <summarizedField>GE_SS_Time__c.GE_SS_HMS_Hours__c</summarizedField>
        <summaryForeignKey>GE_SS_Time__c.GE_SS_Service_Ticket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_SS_Total_Overtime__c</fullName>
        <label>Total Overtime (Hrs)</label>
        <summarizedField>GE_SS_Time__c.GE_SS_Overtime_Hours__c</summarizedField>
        <summaryForeignKey>GE_SS_Time__c.GE_SS_Service_Ticket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_SS_Total_Regular__c</fullName>
        <label>Total Regular (Hrs)</label>
        <summarizedField>GE_SS_Time__c.GE_SS_Regular_Hours__c</summarizedField>
        <summaryForeignKey>GE_SS_Time__c.GE_SS_Service_Ticket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_SS_Total_Standby__c</fullName>
        <label>Total Standby (Hrs)</label>
        <summarizedField>GE_SS_Time__c.GE_SS_Standby_Hours__c</summarizedField>
        <summaryForeignKey>GE_SS_Time__c.GE_SS_Service_Ticket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_SS_Total_Waiting_Days__c</fullName>
        <formula>(GE_SS_Standby_Finish_Date2__c -  GE_SS_Standby_Start_Date2__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Waiting Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Well_ID__c</fullName>
        <label>Well#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Well_Type__c</fullName>
        <label>Well Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Service Tickets</relationshipLabel>
        <relationshipName>Service_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_SS_Service_Representative__c</columns>
        <columns>GE_SS_Service_Start_Date__c</columns>
        <columns>GE_SS_Service_Finish_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Service Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>